unpackaged/main/default/objects/Contract/fields/Subscription_Type__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Type__c</fullName>
    <label>Subscription Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accelerated Build Partner Payment</fullName>
            </value>
            <value>
                <fullName>Accelerated Channel Partner Payment</fullName>
            </value>
            <value>
                <fullName>BI</fullName>
            </value>
            <value>
                <fullName>Fast Designs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>